db automatic updates

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ deathmatch/resources/salamm/meta.xml
 deathmatch/resources/salamm/client.lua
 deathmatch/resource-cache/http-client-files/salamm/ui.html
 deathmatch/resource-cache/http-client-files/salamm/client.lua
+deathmatch/resources/crafting-system/dumpamountselecting
